bug-fix: Add space to bottom of 'add ingredient' button by cleaning some accidental margin on it and updating the padding of the div wrapping the lower content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,11 @@ a {
   &:hover {
     color: #4e3dbf;
   }
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 
 .cocktail {
